# flakies

./: LICENSE  README.md  flake.nix  haskell.nix  java.nix  rust.nix  scala.nix  templates.nix  why3.nix
c/: flake.nix
haskell/: .ghci  flake.nix  hls.json  simple.cabal
haskell/src/: Main.hs
java/: .gitignore  build.gradle  flake.nix
java/src/test/java/main/: AppTest.java
lib/: default.nix
lib/typst/: default.nix
riscv32/: flake.nix
rust/: flake.nix  rust.nix
scala/: .gitignore  .scalafmt.conf  flake.nix
typst/: flake.nix  justfile  main.typ  makefile
typst/.forgejo/workflows/: build-pdf.yml
typst/.github/workflows/: build-pdf.yml
typst/template/: lettre.typ  report.typ
vanilla/: flake.nix
why3/: .envrc  .gitignore  flake.nix
